# stack-graphs

.github/workflows/: ci.yml  languages-ci.yml
languages/tree-sitter-stack-graphs-typescript/: Cargo.toml  package.json
languages/tree-sitter-stack-graphs-typescript/bindings/rust/: lib.rs
script/: cbindgen
stack-graphs/src/: graph.rs  json.rs
stack-graphs/src/visualization/: visualization.js
tree-sitter-stack-graphs/src/: lib.rs
tree-sitter-stack-graphs/src/cli/: analyze.rs
